--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^9.2",
         "laravel/helpers": "^1.6",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "milon/barcode": "^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
