--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/helpers": "^1.6",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "milon/barcode": "^10.0"
+        "league/omnipay": "^3.2",
+        "milon/barcode": "^10.0",
+        "omnipay/paypal": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -62,7 +64,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
